[gd_scene load_steps=3 format=2]

[ext_resource path="res://ble/hub_control_gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://devices/train/train_control_gui.gd" type="Script" id=3]

[node name="TrainControlGui" type="VBoxContainer"]
anchor_bottom = 1.0
offset_bottom = -650.0
custom_minimum_size = Vector2( 0, 155 )
size_flags_horizontal = 3
script = ExtResource( 3 )
train_label = NodePath("VBoxContainer/HBoxContainer2/Label")
control_container = NodePath("VBoxContainer/HBoxContainer")
hub_controls = NodePath("VBoxContainer/HubControl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 199.0
offset_bottom = 120.0
custom_minimum_size = Vector2( 0, 44 )
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 199.0
offset_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
offset_right = 71.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 0, 20 )
text = "train_name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="VBoxContainer/HBoxContainer2"]
offset_left = 75.0
offset_right = 131.0
offset_bottom = 20.0
size_flags_horizontal = 3

[node name="RemoveButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
offset_left = 135.0
offset_right = 199.0
offset_bottom = 20.0
text = "Remove"

[node name="HubControl" parent="VBoxContainer" instance=ExtResource( 2 )]
offset_right = 199.0
offset_bottom = 72.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 76.0
offset_right = 199.0
offset_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stop_button" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_right = 40.0
offset_bottom = 20.0
text = "Stop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slow_button" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 44.0
offset_right = 85.0
offset_bottom = 20.0
text = "Slow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 89.0
offset_right = 141.0
offset_bottom = 20.0
custom_minimum_size = Vector2( 0, 20 )
text = "Cruise"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fast_button" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 145.0
offset_right = 183.0
offset_bottom = 20.0
text = "Fast"

[node name="change_heading_button" type="Button" parent="VBoxContainer"]
offset_top = 100.0
offset_right = 199.0
offset_bottom = 120.0
text = "Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="."]
offset_top = 124.0
offset_right = 199.0
offset_bottom = 128.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/stop_button" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/slow_button" to="." method="_on_slow_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/fast_button" to="." method="_on_fast_button_pressed"]
[connection signal="pressed" from="VBoxContainer/change_heading_button" to="." method="_on_change_heading_button_pressed"]
